# internal/schema/ddl_schema.go
@@ -8,9 +8,16 @@ const (
 )
 
 type CreateDraftReq struct {
-	Raw   []byte          `json:"raw"`
-	Type  string          `json:"data_type"`
-	Draft CreateDraftResp `json:"draft"`
+	Raw   []byte           `json:"raw,omitempty"`
+	Type  string           `json:"data_type" default:"default" example:"default"`
+	Draft CreateDraftInput `json:"draft"`
+}
+
+type CreateDraftInput struct {
+	Title       string    `json:"title" example:"test ddl"`
+	Description string    `json:"description" example:"from swagger"`
+	Deadline    time.Time `json:"deadline" swaggertype:"string" format:"date-time" example:"2026-03-24T14:30:00+08:00"`
+	EealyRemind int       `json:"early_remind" example:"30"`
 }
 
 /*
@@ -21,9 +28,9 @@ uuid
 截止时间前多少分钟提醒
 */
 type CreateDraftResp struct {
-	UUID        string    `json:"uuid"`
-	Title       string    `json:"title"`
-	Description string    `json:"description"`
-	Deadline    time.Time `json:"deadline"`
-	EealyRemind int       `json:"early_remind"`
+	UUID        string    `json:"uuid" example:"7a178766-4b8e-4e99-ab4c-843f7dbd95fd"`
+	Title       string    `json:"title" example:"test ddl"`
+	Description string    `json:"description" example:"from swagger"`
+	Deadline    time.Time `json:"deadline" swaggertype:"string" format:"date-time" example:"2026-03-24T14:30:00+08:00"`
+	EealyRemind int       `json:"early_remind" example:"30"`
 }
